// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render bottom slot 1`] = `
<div class="van-card">
  <div class="van-card__header">
    <div class="van-card__content">
      <div></div>
      <div class="van-card__bottom">Custom Bottom</div>
    </div>
  </div>
</div>
`;

exports[`render origin-price slot 1`] = `
<div class="van-card">
  <div class="van-card__header">
    <div class="van-card__content">
      <div></div>
      <div class="van-card__bottom">
        <div class="van-card__origin-price">Custom Origin Price</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render price & num slot 1`] = `
<div class="van-card">
  <div class="van-card__header">
    <div class="van-card__content">
      <div></div>
      <div class="van-card__bottom">
        <div class="van-card__price">Custom Price</div>
        <div class="van-card__num">Custom Num</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render thumb & tag slot 1`] = `
<div class="van-card">
  <div class="van-card__header"><a class="van-card__thumb">Custom Thumb<div class="van-card__tag">Custom Tag</div></a>
    <div class="van-card__content">
      <div></div>
    </div>
  </div>
</div>
`;

exports[`render title & desc slot 1`] = `
<div class="van-card">
  <div class="van-card__header">
    <div class="van-card__content">
      <div>Custom TitleCustom desc</div>
    </div>
  </div>
</div>
`;

exports[`render price & price-top slot 1`] = `
<div class="van-card">
  <div class="van-card__header">
    <div class="van-card__content">
      <div></div>
      <div class="van-card__bottom">Custom Price-top<div class="van-card__price">Custom Price</div>
      </div>
    </div>
  </div>
</div>
`;